Refactoring all classes removing most all warnings and updating patterns to new styles